vlib/v/checker/tests/const_match_mismatch_end_range_err.vv
const start = 12

const end = `a`

match 5 {
	0...end {
		println(start)
	}
	`a`...start {
		println(end)
	}
	else {}
}

a := match 5 {
	0...end {
		1
	}
	`a`...start {
		`a`
	}
	else {
		2
	}
}
println(a)
